--- a/src/Elements/Hero.css
+++ b/src/Elements/Hero.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap');
 .hero-section {
+
   position: relative;
   width: 100%;
   height: auto;
@@ -6,18 +8,19 @@
 
 .hero-content {
   position: relative;
+
 }
 .hero-bg-content {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 1200vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   z-index: 899;
   color: rgba(255, 255, 255);
-}
+ }
 
 .hero-bg-content .hero-title {
   font-weight: 900;
@@ -47,15 +50,18 @@
 
 .hero-bg-content .hero-description {
   position: absolute;
-  top: 120px;
-  right: 150px;
+  top: 220px;
+  right: 30px;
   /* bottom: 150px; */
-  font-weight: 900;
+  font-weight: 100;
   text-align: right;
   font-family: "Lato";
-  font-size: 50px;
+  font-size: 20px;
   line-height: 1.6em;
   letter-spacing: 1.5px;
+  color: rgba(255, 255, 255, 0.8);
+  z-index: 800;
+
 }
 
 .hero-bg-content .hero-description::before {
@@ -65,18 +71,20 @@
   top: 35px;
   left: -130px;
   height: 200px;
-  width: 80px;
+  width: 80px; 
 }
+
+
 
 .hero-moving-text {
   position: absolute;
-  top: 500px;
-  left: -100px;
+  top: 350px;
+  left: 450px;
   font-family: "Lato";
   font-weight: 900;
   z-index: 100;
-  color: rgba(255, 255, 255, 0.15);
-  font-size: 17vw;
+  color: rgba(255, 255, 255, 0.09);
+  font-size: 13vw;
   transition: transform 2s ease;
   white-space: nowrap;
   z-index: -1;
@@ -84,33 +92,99 @@
 
 .hero-moving-text1 {
   position: absolute;
-  top: 500px;
-  left: -300px;
+  top: 150px;
+  left: 100px;
   font-family: "Lato";
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255, 0.09);
   font-weight: 900;
   z-index: -1;
-  font-size: 17vw;
-  transition: transform 0.3s ease;
+  font-size: 13vw;
+  transition: transform 2s ease;
   white-space: nowrap;
-  transform: rotate(90deg);
+  /* transform: rotate(90deg); */
 }
 
 /* hero-bg-image */
 .hero-content .image{
-  position: relative;
+  position: absolute;
   display: flex;
+  /* left: 400px; */
+  /* top: 150px; */
   width: 100%;
   height: 100vh;
   align-items: center;
-  justify-content: center;
+  justify-content:center;
+  filter: grayscale(50%);
   /* align-items: center; */
+  z-index: 1;
 }
 .hero-content .image img{
-  box-shadow: 0 3px 10px rgb(255 255 255 / 0.3) ;
+  box-shadow: 30px 30px 300px rgba(0,0,0,0.9) inset;
+  /* box-shadow: 0 3px 10px rgb(255 255 255 / 0.3) ; */
   position: absolute;
-  width: 400px;
-  height: 550px;
+  width: 480px;
+  height: 650px;
+}
+.hero-content .image3{
+  position: absolute;
+  /* display: flex; */
+  left: 690px;
+  top: 100px;
+  width: 100%;
+  height: 100vh;
+  /* align-items: center; */
+  /* justify-content:; */
+  filter: grayscale(100%);
+  /* align-items: center; */
+  z-index: 1;
+}
+.hero-content .image3 img{
+  box-shadow: 30px 30px 300px rgba(0,0,0,0.9) inset;
+  /* box-shadow: 0 3px 10px rgb(255 255 255 / 0.3) ; */
+  position: absolute;
+  width: 250px;
+  height: 350px;
+}
+
+
+.hero-content .image1{
+  position: absolute;
+  /* display: flex; */
+  width: 100%;
+  height: 100vh;
+  top: 400px;
+  /* top: 50%; */
+  left: 40%;
+  /* transform: translate(-50%); */
+  /* align-items: center; */
+  /* justify-content: center; */
+  filter: grayscale(100%);
+  /* align-items: center; */
+  z-index: 3;
+}
+.hero-content .image1 img{
+  box-shadow: 30px 30px 300px rgba(0,0,0,0.9) inset;
+  /* box-shadow: 0 3px 10px rgb(255 255 255 / 0.3) ; */
+  position: absolute;
+  /* top: 10px; */
+  width: 220px;
+  height: 250px;
+}
+.vignette {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0px 0px 200px rgba(0,0,0,0.9) inset;
+  z-index: 999;
+}
+
+.images{
+  position: relative;
+  /* left: 5%; */
+  /* width: fit-content; */
+  /* height: fit-content; */
 }
 
 @media screen and (max-width: 1199.98px) {
